--- a/Project.toml
+++ b/Project.toml
@@ -3,7 +3,11 @@ uuid = "2ad872f3-bd17-40a7-8827-3f17cb035345"
 authors = ["Yiting Zhang"]
 version = "0.1.0"
 
+[deps]
+ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
+
 [compat]
+ForwardDiff = "0.10"
 julia = "1"
 
 [extras]
