--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,30 @@
-language: node_js
-node_js:
- - "node"
+# Documentation: http://docs.travis-ci.com/user/languages/julia/
+language: julia
+codecov: true
+coveralls: true
+os:
+  - linux
+  - osx
+julia:
+  - "1.0"
+  - "1.1"
+  - "1.2"
+  - "1.3"
+  - "1.4"
+  - "1.5"
+  - nightly
+matrix:
+  allow_failures:
+    - julia: nightly
+notifications:
+  email: false
+after_script:
+  - bash ./docs/travis.sh
+#after_success:
+#  - julia -e 'cd(Pkg.dir("ApproxFunRational")); Pkg.add("Coverage"); using Coverage; Codecov.submit(Codecov.process_folder())'
+
+
+# uncomment the following lines to override the default test script
+#script:
+#  - if [[ -a .git/shallow ]]; then git fetch --unshallow; fi
+#  - julia -e 'Pkg.clone(pwd()); Pkg.build("MyPackage"); Pkg.test("MyPackage"; coverage=true)'
