--- a/Project.toml
+++ b/Project.toml
@@ -4,12 +4,19 @@ authors = ["Yiting Zhang"]
 version = "0.1.0"
 
 [deps]
+LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+Distributions = "31c24e10-a181-5473-b8eb-7969acd0382f"
 ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
-ForwardDiff = "f6369f11-7733-5829-9624-2563aa707210"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
-ForwardDiff = "0.10"
+ApproxFun = "0.11.8, 0.12"
+SpecialFunctions = "0.7"
+Distributions = "0.22, 0.23, 0.24, 0.25"
 julia = "1"
 
 [extras]
