--- a/Project.toml
+++ b/Project.toml
@@ -15,8 +15,8 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 
 [compat]
 ApproxFun = "0.11.8, 0.12"
+Distributions = "0.25"
 SpecialFunctions = "0.7"
-Distributions = "0.22, 0.23, 0.24, 0.25"
 julia = "1"
 
 [extras]
