--- a/Project.toml
+++ b/Project.toml
@@ -17,6 +17,7 @@ Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
 ApproxFun = "0.11.8, 0.12"
 Distributions = "0.25"
 SpecialFunctions = "0.7"
+Plots = "1.2"
 julia = "1"
 
 [extras]
