--- a/Project.toml
+++ b/Project.toml
@@ -11,11 +11,13 @@ ApproxFun = "28f2ccd6-bb30-5033-b560-165f7b14dc2f"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+FastTransforms = "057dd010-8810-581a-b7be-e3fc3b93f78c"
 
 [compat]
 ApproxFun = "0.11.8, 0.12"
 SpecialFunctions = "0.7"
 Plots = "1.2"
+FastTransforms = "0.5"
 julia = "1"
 
 [extras]
