--- a/Project.toml
+++ b/Project.toml
@@ -5,11 +5,13 @@ version = "0.1.0"
 
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
-Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
+Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 
 
 [compat]
-
+SpecialFunctions = "0.7"
+Plots = "1.2"
+FastTransforms = "0.5"
 julia = "1"
 
 [extras]
