--- a/Project.toml
+++ b/Project.toml
@@ -6,7 +6,10 @@ version = "0.1.0"
 [deps]
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
-
+SparseArrays = "2f01184e-e22b-5df5-ae63-d93ebab69eaf"
+SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
+Plots = "91a5bcdd-55d7-5caf-9e0b-520d859cae80"
+FastTransforms = "057dd010-8810-581a-b7be-e3fc3b93f78c"
 
 [compat]
 SpecialFunctions = "0.7"
