--- a/Project.toml
+++ b/Project.toml
@@ -1,6 +1,6 @@
 name = "TracyWidomBeta"
 uuid = "2ad872f3-bd17-40a7-8827-3f17cb035345"
-authors = ["Yiting Zhang"]
+authors = ["Yiting Zhang","Thomas Trogdon"]
 version = "0.1.0"
 
 [deps]
