--- a/Project.toml
+++ b/Project.toml
@@ -16,6 +16,9 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 
 [compat]
 Distributions = "0.25"
+ApproxFun = "0.11, 0.12"
+FFTW = "1.4"
+SpecialFunctions = "1.7, 1.8, 1.9"
 Plots = "1.2"
 Trapz = "2.0.3"
 julia = "1"
