--- a/Project.toml
+++ b/Project.toml
@@ -18,7 +18,7 @@ FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
 Distributions = "0.25"
 ApproxFun = "0.11.8, 0.12"
 FFTW = "0.3, 1"
-SpecialFunctions = "0.7"
+SpecialFunctions = "1.0, 2"
 Plots = "1.2"
 Trapz = "2.0.3"
 julia = "1"
