--- a/Project.toml
+++ b/Project.toml
@@ -17,7 +17,7 @@ FastTransforms = "057dd010-8810-581a-b7be-e3fc3b93f78c"
 
 [compat]
 Distributions = "0.25"
-ApproxFun = "0.11.8, 0.12"
+ApproxFun = 0.9.0-0.13.17
 FFTW = "0.3, 1"
 FastTransforms = "0.14"
 SpecialFunctions = "1.0, 2"
