--- a/Project.toml
+++ b/Project.toml
@@ -23,7 +23,7 @@ FFTW = "0.3, 1"
 SpecialFunctions = "1.0, 2"
 Plots = "1.2"
 Trapz = "2.0.3"
-julia = "1"
+julia = "1.6, 1.7, 1.8"
 
 [extras]
 Test = "8dfed614-e22c-5e08-85e1-65c5234f0b40"
