--- a/Project.toml
+++ b/Project.toml
@@ -12,6 +12,7 @@ Statistics = "10745b16-79ce-11e8-11f9-7d13ad32a3b2"
 Trapz = "592b5752-818d-11e9-1e9a-2b8ca4a44cd1"
 SpecialFunctions = "276daf66-3868-5448-9aa4-cd146d93841b"
 FFTW = "7a1cc6ca-52ef-59f5-83cd-3a7055c09341"
+RandomMatrices = "e6cf234a-135c-5ec9-84dd-8a4237f9bbc9"
 
 [compat]
 Distributions = "0.25"
